opus: Duplicated symbols
It use to be critical for iOS / Android builds, hence reporting this warning. There is some copy-pasted code that lead to duplicate symbols as reported by iOS build.
0:08:58.690067 WARNING: The static library contains duplicated symbols
0:08:58.690110 _main
0:08:58.690123 /var/folders/rp/g_qc9bkd5x1gw77dsmylr41m0000gn/T/tmpfdy_au9n/arm64/GStreamer:libgstdv_a-smpte_test.c.o:
0:08:58.690130 /var/folders/rp/g_qc9bkd5x1gw77dsmylr41m0000gn/T/tmpfdy_au9n/arm64/GStreamer:libwebrtc_audio_processing_a-transient_click_annotate.cc.o:
0:08:58.690136 _gst_opus_header_is_comment_header
0:08:58.690142 /var/folders/rp/g_qc9bkd5x1gw77dsmylr41m0000gn/T/tmpfdy_au9n/arm64/GStreamer:libgstopus_a-gstopusheader.c.o:
0:08:58.690148 /var/folders/rp/g_qc9bkd5x1gw77dsmylr41m0000gn/T/tmpfdy_au9n/arm64/GStreamer:libgstopusparse_a-gstopusheader.c.o:
0:08:58.690153 _gst_opus_header_is_header
0:08:58.690159 /var/folders/rp/g_qc9bkd5x1gw77dsmylr41m0000gn/T/tmpfdy_au9n/arm64/GStreamer:libgstopus_a-gstopusheader.c.o:
0:08:58.690165 /var/folders/rp/g_qc9bkd5x1gw77dsmylr41m0000gn/T/tmpfdy_au9n/arm64/GStreamer:libgstopusparse_a-gstopusheader.c.o:
0:08:58.690170 _gst_opus_header_is_id_header
0:08:58.690175 /var/folders/rp/g_qc9bkd5x1gw77dsmylr41m0000gn/T/tmpfdy_au9n/arm64/GStreamer:libgstopus_a-gstopusheader.c.o:
0:08:58.690181 /var/folders/rp/g_qc9bkd5x1gw77dsmylr41m0000gn/T/tmpfdy_au9n/arm64/GStreamer:libgstopusparse_a-gstopusheader.c.o: